--- a/particles.js粒子特效/lizi/css/style.css
+++ b/particles.js粒子特效/lizi/css/style.css
@@ -25,7 +25,7 @@ li{list-style:none}*/
 html,body{ 
 	width:100%;
 	height:80%;
-	/* background:#000; */
+	background:#000; 
 }
 
 /* remove canvas default margin */
