--- a/自适应手机粒子特效/css/style.css
+++ b/自适应手机粒子特效/css/style.css
@@ -3,7 +3,7 @@ CSS Reset
 http://meyerweb.com/eric/tools/css/reset/
 */
 
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -44,7 +44,7 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
+} */
 
 /* particleground demo */
 
@@ -61,7 +61,7 @@ html, body {
 }
 
 body {
-  background: #16a085;
+  background: #000;
   font-family: 'Montserrat', sans-serif;
   color: #fff;
   line-height: 1.3;
@@ -74,7 +74,7 @@ body {
   overflow: hidden;
 }
 
-.intro {
+/* .intro {
   position: absolute;
   left: 0;
   top: 50%;
@@ -162,4 +162,4 @@ p {
   h1::after {
     height: 4px;
   }
-}
+} */
