--- a/输入框特效/css/style.css
+++ b/输入框特效/css/style.css
@@ -1,24 +1,31 @@
 input {
-  border: 2px solid #5E6C77;
+  border: 2px solid rgba(255,255,255,0.3);
+  box-shadow: inset 0 0 4px rgba(255,255,255,0.2),0 0 4px rgba(255,255,255,0.2);  /*内外渐变阴影*/
   font-size: 1.5em;
   padding: .25em .5em .3125em;
-  color: #5E6C77;
+  color: #fff;
   border-radius: .25em;
   background: transparent;
-  -webkit-transition: all .100s;
-  transition: all .100s;
+  /* -webkit-transition: all .100s; */
+  transition: all .5s;
+
+  -o-transition:all .5s;-moz-transition:all .5s;-webkit-transition:all .5s;-ms-transition:all .5s;
 }
+
+/* #particles-js input:-moz-placeholder{color:#c2c5cd;} */
 input:focus {
   outline: none;
   color: #A2ACB3;
-  border-color: #A2ACB3;
+  border-color: #fff;
+  -webkit-box-shadow:0 0 5px #fff;
+  box-shadow:0 0 5px #fff;
 }
-input.keyup {
+/* input.keyup {
   color: white;
   border-color: white;
   text-shadow: 0 0 .125em white;
   box-shadow: 0 0 .25em white,inset 0 0 .25em white;
-}
+} */
 
 body {
   display: -webkit-box;
@@ -48,7 +55,7 @@ input {
   font-family: "Arial Rounded MT Bold","Helvetica Rounded",Arial,sans-serif;
 }
 
-::-webkit-input-placeholder {
+/* ::-webkit-input-placeholder {
   color: #5E6C77;
   text-shadow: 0 0 .125em transparent;
   -webkit-transition: all .25s;
@@ -79,7 +86,7 @@ input:focus::-moz-placeholder {
 
 input:focus:-ms-input-placeholder {
   opacity: .5;
-}
+} */
 
 html, body {
   height: 100%;
